--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -15,7 +15,16 @@
     <filter-name>encoding</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
+   
+  <filter>
+    <filter-name>login</filter-name>
+    <filter-class>servlet.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>login</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+ 
   <servlet>
     <servlet-name>CartServlet</servlet-name>
     <servlet-class>servlet.CartServlet</servlet-class>
@@ -25,4 +34,18 @@
     <url-pattern>/servlet/CartServlet</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+        <servlet-name>UploadhandleServlrt</servlet-name>
+        <servlet-class>servlet.UploadHandleServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UploadhandleServlrt</servlet-name>
+        <url-pattern>/servlet/UploadhandleServlet</url-pattern>
+    </servlet-mapping>
+  
+  <listener>
+    <listener-class>
+  		servlet.OnlineUserList
+  	</listener-class>
+  </listener>
 </web-app>
